@@ -27,6 +27,6 @@
 
 #include "others.h"
 
-int cli_7unz (cli_ctx *);
+int cli_7unz (cli_ctx *, size_t);
 
 #endif
