@@ -80,6 +80,7 @@ typedef enum {
     CL_TYPE_SFX, /* foo SFX marker */
     CL_TYPE_ZIPSFX, /* on the fly */
     CL_TYPE_RARSFX, /* on the fly */
+    CL_TYPE_7ZSFX,
     CL_TYPE_CABSFX,
     CL_TYPE_ARJSFX,
     CL_TYPE_NULSFT, /* on the fly */
